[package]
name = "bender"
description = "A CLI interface for configuring libhooker on iOS"
version = "1.0.0"
authors = ["aspen <aspenuwu@protonmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/aspenluxxxy/bender"
edition = "2018"
readme = "README.md"
publish = false

[dependencies]
clap = "3.0.0-beta.2"
color-eyre = "0.5"
colorful = "0.2"
libc = "0.2"
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
once_cell = "1.5"
plist = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
xpc-connection = { git = "https://github.com/aspenluxxxy/xpc-connection-rs", rev = "181c0ad5e6acaafefa3a3f99c2a1ae21dde5628e" }
xpc-connection-sys = { git = "https://github.com/aspenluxxxy/xpc-connection-rs", rev = "181c0ad5e6acaafefa3a3f99c2a1ae21dde5628e" }

[package.metadata.deb]
architecture = "iphoneos-arm"
copyright = "2021, aspen <aspenuwu@protonmail.com>"
depends = "org.coolstar.libhooker (>=1.4.0), cy+cpu.arm64"
priority = "optional"
section = "utils"

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 3

[profile.release.package.'*']
codegen-units = 1
incremental = true
opt-level = 3

[profile.dev.package.backtrace]
opt-level = 3
